    Patch from Ian Ward Comfort.

    The majority of the WebLogin scripts have been moved into a new
    WebLogin Perl module, which should make it somewhat easier to further
    customize the WebLogin interface if desired.

    The timestamps output by wa_keyring list now contain dates in the ISO
    format YYYY-MM-DD instead of the US-centric and ambiguous MM/DD/YYYY.

    Change the libwebauth API to use size_t and other data types more
    correctly instead of always using int.  This will require updates in
    all calling applications.

    wa_keyring calls the OpenSSL MD5 functions directly, so explicitly
    link it with libcrypto.  Fixes build failures with gold.

    Avoid importing isa from UNIVERSAL in the WebAuth Perl modules.  This
    is deprecated in Perl 5.12 and later.

    Mention setting $KEYRING_PATH in docs/install-spnego and expand the
    documentation in docs/weblogin-config.

    Changed terminology in the WebAuth protocol specification to refer to
    a KRB_AP_REQ rather than the results of krb5_mk_req.  The latter is a
    call specific to a particular API, whereas the former is the term used
    in the Kerberos protocol documentation.  Thanks, Liam Atkinson.

    The Autoconf probe for the cURL libraries now uses curl-config if
    available.  The path to curl-config can be overridden by setting the
    CURL_CONFIG variable on the configure command line or in the
    environment.

    Update to rra-c-util 2.4:

    * Use rra-c-util portability layer for libwebauth and wa_keyring.
    * Use rra-c-util utility library for wa_keyring.
    * Use --with-krb5 instead of --with-kerberos for Kerberos path.
    * Add --with-krb5-lib and --with-krb5-include configure flags.
    * Much better handling of Kerberos library detection.
    * Use Kerberos portability code from rra-c-util.

    Update to C TAP Harness 1.3:

    * Support running a single test with tests/runtests -o.
    * Better reporting of fatal errors in the test suite.