@@ -59,7 +59,6 @@ WEBAUTH_2.0 {
         webauth_krb5_init_via_cache;
         webauth_krb5_export_tgt;
         webauth_krb5_import_cred;
-        webauth_krb5_service_principal;
         webauth_krb5_get_principal;
         webauth_krb5_get_realm;
         webauth_krb5_export_ticket;
