@@ -44,6 +44,11 @@ WebAuth 3.7.0 (unreleased)
     The timestamps output by wa_keyring list now contain dates in the ISO
     format YYYY-MM-DD instead of the US-centric and ambiguous MM/DD/YYYY.
 
+    Removed the webauth_krb5_service_principal function from libwebauth
+    and from the WebAuth Perl module.  This function's API was
+    fundamentally flawed since it did not handle realms, and it was not
+    used anywhere in the WebAuth code.
+
     Change the libwebauth API to use size_t and other data types more
     correctly instead of always using int.  This will require updates in
     all calling applications.
